<resources>
    <string name="app_name">Конвертер валют beta</string>

    <string name="inputOldText">Введите сумму в старых рублях:</string>
    <string name="inputText">Введите сюда сумму</string>
    <string name="conButtonText">Конвертировать</string>
    <string name="outputOldText">Сумма в новых рублях</string>
    <string name="textInputNew">Введите сумму в новых рублях:</string>
    <string name="outputNewText">Сумма в старых рублях</string>
    <string name="convTextOldInput">Поле для ввода суммы в старых рублях:</string>
    <string name="convTextNewInput">Поле для вводе суммы в новых рублях:</string>
    <string name="convOutputText">Сумма в долларах</string>
    
    <string name="resultConverterDefaultText">Результат: </string>

    <string name="tab_item_converter">Конвертер</string>
    <string name="tab_item_denomination">Деноминатор</string>
    <string name="tab_item_currencyList">Курс валют</string>

    <string name="action_settings">Тема</string>
    <string name="choice_currency">Выбор валюты</string>
    <string name="action_convert">Конвертер валюты</string>
    <string name="action_denomination">Конвертер рублей</string>


    <string name="choiceThemeTitle">Выберите тему:</string>
    <string name="choiceCurrencyTitle">Выберите валюту:</string>
    <string name="choiceThemePositiveButton">Выбрать</string>

    <string name="toastGetCurrencyFailed">Не удалось загрузить курс валют!</string>
    <string name="toastGetDatabaseCurrencyFailed">Не удалось загрузить данные из базы данных!</string>
    <string name="toastEmptyTextInputField">Введите сумму!</string>

    <string name="toastGetCurrencySucces">Курс валют удачно загрузился!</string>

    <string name="abbreviationBelRub">BYN</string>
</resources>
