<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convTextOldInput"
        android:id="@+id/convInputTextOld"
        android:textSize="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/inputConvSumOld"
        android:hint="@string/inputText" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conButtonText"
        android:id="@+id/convOldButton"
        android:layout_gravity="right"
        android:onClick="convOld" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convTextNewInput"
        android:id="@+id/convInputTextNew"
        android:textSize="16dp"
        android:textIsSelectable="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/inputConvSumNew"
        android:hint="@string/inputText" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conButtonText"
        android:id="@+id/convNewButton"
        android:layout_gravity="right"
        android:onClick="convNew" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convOutputText"
        android:id="@+id/convOutputSum"
        android:textSize="16dp"
        android:textIsSelectable="true" />
</LinearLayout>