<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputOldText"
        android:id="@+id/textInputOld"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16dp"
        android:textIsSelectable="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputOld"
        android:layout_below="@+id/textInputOld"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="number"
        android:hint="@string/inputText" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conButtonText"
        android:id="@+id/conOldButton"
        android:onClick="conOldButtonClick"
        android:layout_below="@+id/textInputOld"
        android:layout_toRightOf="@+id/inputOld"
        android:layout_toEndOf="@+id/inputOld"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outputOldText"
        android:id="@+id/outputOldText"
        android:layout_below="@+id/conOldButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textInputNew"
        android:id="@+id/textInputNew"
        android:layout_below="@+id/outputOldText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="74dp"
        android:textSize="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputNew"
        android:layout_below="@+id/textInputNew"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/inputText"
        android:inputType="number|numberDecimal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conButtonText"
        android:id="@+id/conNewButton"
        android:onClick="conNewButtonClick"
        android:layout_alignTop="@+id/inputNew"
        android:layout_toRightOf="@+id/inputNew"
        android:layout_toEndOf="@+id/inputNew"
        android:layout_alignParentRight="true"
        style="?android:attr/buttonStyleSmall" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outputNewText"
        android:id="@+id/outputNewText"
        android:layout_below="@+id/inputNew"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16dp" />
</RelativeLayout>
