<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Spinner
        android:id="@+id/spinnerInitialCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputValue"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/inputValue"
        android:paddingLeft="16dp"
        android:paddingTop="16dp" />

    <ImageView
        android:id="@+id/arrowConverterFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:paddingTop="16dp"
        app:srcCompat="@mipmap/ic_trending_flat_black_24dp" />

    <Spinner
        android:id="@+id/spinnerResultCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp" />

    <Button
        android:id="@+id/buttonConvert"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewResultConverter"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/whiteColorPrimary"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/conButtonText"
        android:textAlignment="center"
        android:textColor="@color/whiteTextColorPrimary" />

    <TextView
        android:id="@+id/textViewResultConverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inputValue"
        android:layout_marginTop="24dp"
        android:paddingLeft="16dp"
        android:text="@string/resultConverterDefaultText" />

    <EditText
        android:id="@+id/inputValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonConvert"
        android:layout_alignStart="@+id/buttonConvert"
        android:layout_below="@+id/arrowConverterFragment"
        android:ems="10"
        android:hint="@string/inputText"
        android:inputType="numberDecimal"
        android:paddingLeft="16dp" />

</RelativeLayout>